--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,27 +1,50 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.JabMessenger" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.JabMessenger" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorPrimaryVariant">@color/primaryLightColor</item>
         <item name="colorOnPrimary">@color/primaryTextColor</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/secondaryColor</item>
-        <item name="colorSecondaryVariant">@color/secondaryLightColor</item>
+        <item name="colorSecondary">@color/secondaryDarkColor</item>
+        <item name="colorSecondaryVariant">@color/secondaryColor</item>
         <item name="colorOnSecondary">@color/secondaryTextColor</item>
 
         <!-- Customize your theme here. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/primaryDarkColor</item>
         <item name="android:windowBackground">@color/primaryDarkColor</item>
-
-
-    </style>
-
-    <style name="SplashScreenStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowBackground">@color/primaryDarkColor</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/primaryDarkColor</item>
+        <item name="android:statusBarColor">@color/primaryDarkColor</item>
         <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textAlignment">center</item>
+
     </style>
+
+    <!-- Misc Widget Themes-->
+    <style name="PrimaryButton_Custom">
+        <item name="android:textColor">@color/secondaryTextColor</item>
+        <item name="android:background">@drawable/primary_button</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="GhostButton_Custom">
+        <item name="android:textColor">@color/secondaryTextColor</item>
+        <item name="android:background">@drawable/ghost_button</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OutlinedTextEdit" parent="Widget.AppCompat.EditText">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Full Fragment Themes-->
+    <style name="Theme_SplashScreen" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowBackground">@color/primaryDarkColor</item>
+        <item name="android:statusBarColor">@color/primaryDarkColor</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+    </style>
+
 </resources>
